# dino

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/: 80sloop.fda  Bittboy.layout  PC.layout  RG35XX.layout  RG35XX22.layout  doNotPack.txt
platform/: cross_build.sh  platform_build.sh
src/: dino.cc  fda.c  fda.h  image.cc  image.hh  input.cc  input.hh  menu.cc  menu.hh  miyoo_audio.cc  miyoo_audio.hh  pack.cc  pack.hh  perftext.cc  perftext.hh  util.cc  util.hh
test/: no_tests_yet.cc
tool/: layout.cc
